# ocaml-quirc

./: .gitmodules  README.md  dune  dune-project  quirc.opam
_build/: log
constants/: README.md  constants.ml  dune  function_description.ml  type_description.ml
example/: dune  example.ml  hello.pgm
lib/: dune  foo.ml  function_description.ml  quirc.ml  quirc.mli  type_description.ml
lib/libfoo/: Makefile  foo.c  foo.h
test/: dune
