(library
 (public_name quirc)
 (name quirc)
 (libraries constants ctypes ctypes.foreign)
 (ctypes
  (external_library_name quirc)
  (build_flags_resolver
   (vendored
    (c_flags :standard -Wall -Werror -I../quirc)
    (c_library_flags :standard -Wall -Werror)))
  (headers
   (include "lib/quirc.h"))
  (type_description
   (instance Types)
   (functor Type_description))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C))
 (foreign_archives quirc))

(rule
 (deps
  (source_tree ../quirc))
 (targets libquirc.a dllquirc.so)
 (action
  (no-infer
   (progn
    (chdir
     ../quirc
     (run make))
    (copy ../quirc/libquirc.a libquirc.a)
    (copy ../quirc/libquirc.so.1.2 dllquirc.so)))))
